[tool.poetry]
name = "r-d-asyncio-course"
version = "0.1.0"
description = ""
authors = ["srusskih <smilemouse2002@ukr.net>"]
readme = "README.md"
packages = [{include = "r_d"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
